<resources>
    <string name="app_name">Кетокалькулятор Солнцево (PRO)</string>
    <string name="receipts_btn">Рецепты</string>
    <string name="dishes_btn">Блюда</string>
    <string name="products_btn">Продукты (БЖУ)</string>
    <string name="settings_btn">Настройки</string>
    <string name="about_btn">О программе</string>
    <string name="title_activity_receipts">Рецепты</string>
    <string name="title_activity_dishes">Блюда</string>
    <string name="title_activity_products">Продукты (БЖУ)</string>
    <string name="title_activity_products_selector">Продукты</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_about">О программе</string>
    <string name="title_activity_receipt_editor">Редактирование</string>
    <string name="title_activity_dish_editor">Редактирование</string>
    <string name="title_activity_product_editor">Редактирование</string>
    <string name="title_activity_settings_editor">Редактирование</string>
    <string name="empty_list_text">Нет данных для отображения</string>
    <string name="backup_db">Создать резервную копию</string>
    <string name="restore_db">Восстановить резервную копию</string>
    <string name="settings_name">Название</string>
    <string name="settings_is_default">Использовать по умолчанию</string>
    <string name="settings_fraction">Соотношение</string>
    <string name="settings_fraction_hint">например, 2.7 к 1</string>
    <string name="settings_fraction_tip">к 1</string>
    <string name="settings_calories">Калории</string>
    <string name="settings_proteins">Белок (протеины)</string>
    <string name="settings_food_portions">Порции</string>
    <string name="settings_food_portions_hint">%, в сумме не больше 100</string>
    <string name="settings_save">Сохранить</string>
    <string name="settings_editor_activity_title_new">Создание</string>
    <string name="settings_editor_activity_title_edit">Редактирование</string>
    <string name="editor_insert_settings_failed">Ошибка при создании настроек</string>
    <string name="editor_insert_settings_successful">Настройки созданы</string>
    <string name="editor_update_settings_failed">Ошибка при обновлении настроек</string>
    <string name="editor_update_settings_successful">Настройки обновлены</string>
    <string name="delete_settings_dialog_msg">Удалить настройки?</string>
    <string name="editor_delete_settings_failed">Ошибка при удалении настроек</string>
    <string name="editor_delete_settings_successful">Настройки удалены</string>
    <string name="product_summary">БЖУ: %1s/%2s/%3s</string>
    <string name="products_high_protein">Много белка</string>
    <string name="products_high_fat">Много жира</string>
    <string name="products_high_carbo">Много углеводов</string>
    <string name="products_high_unknown" translatable="false"></string>
    <string name="action_insert_dummy_products">Вставить продукты</string>
    <string name="action_delete_all_products">Удалить все продукты</string>
    <string name="product_name">Название</string>
    <string name="hint_product_name">Сметана</string>
    <string name="product_protein">Белок (г)</string>
    <string name="hint_product_protein">3.0</string>
    <string name="product_fat">Жир (г)</string>
    <string name="hint_product_fat">26.0</string>
    <string name="product_carbo">Углеводы (г)</string>
    <string name="hint_product_carbo">4.5</string>
    <string name="product_tag">Тег</string>
    <string name="product_editor_activity_title_new">Создание</string>
    <string name="product_editor_activity_title_edit">Редактирование</string>
    <string name="product_tag_unknown">нет данных</string>
    <string name="product_tag_highprotein">Много белка</string>
    <string name="product_tag_highfat">Много жира</string>
    <string name="product_tag_highcarbo">Много углеводов</string>
    <string name="editor_insert_product_failed">Ошибка при добавлении продукта</string>
    <string name="editor_insert_product_successful">Продукт добавлен</string>
    <string name="editor_update_product_failed">Ошибка при обновлении продукта</string>
    <string name="editor_update_product_successful">Продукт обновлен</string>
    <string name="editor_delete_product_failed">Ошибка при удалении продукта</string>
    <string name="editor_delete_product_successful">Продукт удален</string>
    <string name="product_menu_action_save">Сохранить</string>
    <string name="product_menu_action_delete">Удалить</string>
    <string name="delete_product_dialog_msg">Удалить продукт?</string>
    <string name="product_selector_search_product_hint">Найти продукт</string>
    <string name="product_selector_menu_action_search">Поиск</string>
    <string name="products_search_product_hint">Найти продукт</string>
    <string name="products_menu_action_search">Поиск</string>
    <string name="add_selected_products_btn_text">Добавить (%s)</string>
    <string name="unsaved_changes_dialog_msg">Отменить изменения и выйти?</string>
    <string name="discard">Выйти</string>
    <string name="keep_editing">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отменить</string>
    <string name="receipt_summary">БЖУ: %1s/%2s/%3s</string>
    <string name="receipt_name">Название</string>
    <string name="hint_receipt_name">Каша</string>
    <string name="receipt_meal">Прием пищи</string>
    <string name="receipt_ingredients">Ингридиенты</string>
    <string name="receipt_total_bzu_indicators">Итого</string>
    <string name="receipt_editor_activity_title_new">Создание</string>
    <string name="receipt_editor_activity_title_edit">Редактирование</string>
    <string name="receipt_meal_unknown">нет данных</string>
    <string name="receipt_meal_breakfast">Завтрак</string>
    <string name="receipt_meal_dinner">Обед</string>
    <string name="receipt_meal_afternoon_snack">Полдник</string>
    <string name="receipt_meal_supper">Ужин</string>
    <string name="receipt_meal_late_supper">Поздний ужин</string>
    <string name="receipt_meal_night_snack">Ночной перекус</string>
    <string name="editor_insert_receipt_failed">Ошибка при добавлении рецепта</string>
    <string name="editor_insert_receipt_successful">Рецепт добавлен</string>
    <string name="editor_update_receipt_failed">Ошибка при обновлении рецепта</string>
    <string name="editor_update_receipt_successful">Рецепт обновлен</string>
    <string name="editor_delete_receipt_failed">Ошибка при удалении рецепта</string>
    <string name="editor_delete_receipt_successful">Рецепт удален</string>
    <string name="receipt_menu_action_save">Сохранить</string>
    <string name="receipt_menu_action_delete">Удалить</string>
    <string name="receipt_total_bzu_label">Рецепт:</string>
    <string name="receipt_summary_protein">0</string>
    <string name="receipt_summary_fat">0</string>
    <string name="receipt_summary_carbo">0</string>
    <string name="receipt_bzu_recommended_label">Расчет:</string>
    <string name="receipt_summary_calculated_protein">0</string>
    <string name="receipt_summary_calculated_fat">0</string>
    <string name="receipt_summary_calculated_carbo">0</string>
    <string name="delete_receipt_dialog_msg">Удалить рецепт?</string>
    <string name="receipt_product_caption_protein">Б</string>
    <string name="receipt_product_caption_fat">Ж</string>
    <string name="receipt_product_caption_carbo">У</string>
    <string name="receipt_product_caption_product_weight">Продукт/Вес (г)</string>
    <string name="receipt_note">Примечание</string>
    <string name="receipts_menu_action_search">Поиск</string>
    <string name="dish_name">Название</string>
    <string name="hint_dish_name">Каша</string>
    <string name="dish_ingredients">Ингридиенты</string>
    <string name="dish_total_bzu_indicators">Итого</string>
    <string name="dish_total_bzu_label">Блюдо:</string>
    <string name="dish_summary_weight">0</string>
    <string name="dish_summary_100_weight_label">Блюдо (100 г):</string>
    <string name="dish_summary_100_weight">100</string>
    <string name="dish_summary_100_weight_protein">0</string>
    <string name="dish_summary_100_weight_fat">0</string>
    <string name="dish_summary_100_weight_carbo">0</string>
    <string name="dish_product_caption_protein">Б</string>
    <string name="dish_product_caption_fat">Ж</string>
    <string name="dish_product_caption_carbo">У</string>
    <string name="dish_note">Примечание</string>
    <string name="hint_dish_note">примечание, например, добавить соль</string>
    <string name="dish_summary_calculated_calories">Калории:</string>
    <string name="dish_summary_100_calories">Калории (100 г):</string>
    <string name="dish_product_caption_weight">Вес (г)</string>
    <string name="about_version">
        PRO Версия: %s
    </string>
    <string name="about_intro">
        Простой калькулятор для расчета блюд кетогенной диеты (в медицинских целях для лечения эпилепсии).
        Построен на основе широко известного в узких кругах Excel файла (например, такой выдают в НПЦ Солнцево).

        Теперь не нужно носить с собой ноутбук и быть привязанным к компьютеру,
        рецепт можно легко посчитать на телефоне.
    </string>
    <string name="about_license">
        Внимание! Программа распространяется "КАК ЕСТЬ" (as is).
        Автор программы не несет никакой ответственности, ни за какой ущерб, причиненный прямым или косвенным образом.
        Всю ответственность несет лицо, использующее данное программное обеспечение.
        Автор оставляет за собой право вносить в программу любые изменения и документировать их в той мере, в какой считает нужным.
        В случае обнаружения каких-либо сбоев в работе программы или несоответствия ее документации, просьба сообщить об этом Автору.
    </string>
    <string name="about_steps">
        Как пользоваться программой:
    </string>
    <string name="about_steps_1">
        Укажите параметры диеты в разделе Настройки.
        Обязательно укажите процентное соотношение блюд, поддерживается 6 приемов пищи в сутки
        (общая сумма не должна превышать 100%).
        Вы можете создавать несколько профилей настроек (под разных пациентов, или под разные соотношения),
        не забудьте выбрать настройку по-умолчанию.
    </string>
    <string name="about_steps_2">
        В разделе Продукты добавьте продукты, которые вы используете для ваших рецептов.
        Укажите содержание белка (Б), жира (Ж), углеводов (У) на 100 грамм веса продукта.
        По желанию отметьте продукт тегом - много жира, много белка, много углеводов.

        Можно добавить список продуктов из готового списка (см. пункт меню Вставить продукты).
        Если вы удаляете продукт, то он все равно останется в рецепте/блюде.
    </string>
    <string name="about_steps_3">
        В разделе Рецепты добавьте рецепт. Обязательно заполните поле "Прием пищи",
        на его основе будет произведен расчет рекомендуемого БЖУ, который должен совпадать с БЖУ рецепта
        (ну или совсем чуть-чуть отличаться на десятые доли).
    </string>
    <string name="about_steps_4">
        В разделе Блюда можно посчитать БЖУ вашего блюда. Например, можно посчитать БЖУ борща или запеканки,
        а на его основе создать продукт, который затем использовать в ваших рецептах.
    </string>
    <string name="about_recommendations">
        Оставляйте ваши пожелания и замечания в отзывах о программе в Google Play. Будьте здоровы!
    </string>
    <string name="dish_create_product">Создать продукт</string>
    <string name="menu_filter_show_all">Показывать все</string>
    <string name="menu_filter_breakfast">Завтрак</string>
    <string name="menu_filter_dinner">Обед</string>
    <string name="menu_filter_afternoon_snack">Полдник</string>
    <string name="menu_filter_supper">Ужин</string>
    <string name="menu_filter_late_supper">Поздний ужин</string>
    <string name="menu_filter_night_snack">Ночной перекус</string>
</resources>