<?xml version="1.0" encoding="utf-8"?>
<!-- Options menu for the ProductsSelectorActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ReceiptsActivity">

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/baseline_filter_list_white_24"
        android:title="@string/receipts_menu_action_search"
        app:showAsAction="always">
        <menu>
            <group android:id="@+id/exclusive_checkable_group"
                android:checkableBehavior="single">
                <item android:id="@+id/menu_filter_show_all"
                    android:title="@string/menu_filter_show_all"/>

                <item android:id="@+id/menu_filter_breakfast"
                    android:title="@string/menu_filter_breakfast"/>

                <item android:id="@+id/menu_filter_dinner"
                    android:title="@string/menu_filter_dinner"/>

                <item android:id="@+id/menu_filter_afternoon_snack"
                    android:title="@string/menu_filter_afternoon_snack"/>

                <item android:id="@+id/menu_filter_supper"
                    android:title="@string/menu_filter_supper"/>

                <item android:id="@+id/menu_filter_late_supper"
                    android:title="@string/menu_filter_late_supper"/>

                <item android:id="@+id/menu_filter_night_snack"
                    android:title="@string/menu_filter_night_snack"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/baseline_search_white_24"
        android:title="@string/receipts_menu_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>