<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="ru.profitcode.ketocalc.ProductEditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <!-- Name field -->
            <TextView
                android:text="@string/product_name"
                style="@style/FieldNameStyle" />

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapSentences"
                style="@style/EditorFieldStyle" />

            <!-- Protein field -->
            <TextView
                android:text="@string/product_protein"
                style="@style/FieldNameStyle" />

            <EditText
                android:id="@+id/edit_product_protein"
                android:hint="@string/hint_product_protein"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <!-- Fat field -->
            <TextView
                android:text="@string/product_fat"
                style="@style/FieldNameStyle" />

            <EditText
                android:id="@+id/edit_product_fat"
                android:hint="@string/hint_product_fat"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <!-- Carbo field -->
            <TextView
                android:text="@string/product_carbo"
                style="@style/FieldNameStyle" />

            <EditText
                android:id="@+id/edit_product_carbo"
                android:hint="@string/hint_product_carbo"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <!-- Tag category -->
            <TextView
                android:text="@string/product_tag"
                style="@style/FieldNameStyle" />

            <!-- Tag drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_tag"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
        <!--ads:adUnitId="ca-app-pub-9772487056729057/6478130320"-->

    </RelativeLayout>

</ScrollView>