<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="ru.profitcode.ketocalc.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="@dimen/list_adv_layout_marginBottom">

            <TextView
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>

            <View
                android:layout_height="2dip"
                android:background="#FF909090"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_intro"
                android:textSize="14sp"
                android:textColor="@color/colorText"/>

            <View
                android:layout_height="2dip"
                android:background="#FF909090"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_license"
                android:textSize="14sp"
                android:textColor="@color/colorText"/>

            <View
                android:layout_height="2dip"
                android:background="#FF909090"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_steps"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_steps_1"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_steps_2"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorText"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_steps_3"
                android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_steps_4"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorText"/>

            <View
                android:layout_height="2dip"
                android:background="#FF909090"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_recommendations"
                android:textSize="14sp"
                android:textColor="@color/colorText"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/adViewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
        </FrameLayout>


    </RelativeLayout>

</ScrollView>
